--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -53,11 +53,11 @@
             </div>
             <div class="c-footer">
                 <div class="c-evaluation">
-                    <i class="bi bi-hand-thumbs-up c-likebtn likebtn"></i>
+                    <i class="bi bi-hand-thumbs-up c-likebtn likebtn" data-action="like" data-target="comment"></i>
                     <span class="c-likes">
 
                     </span>
-                    <i class="bi bi-hand-thumbs-down c-dislikebtn dislikebtn"></i>
+                    <i class="bi bi-hand-thumbs-down c-dislikebtn dislikebtn" data-action="dislike" data-target="comment"></i>
                     <a href="#" class="c-replybtn">Reply</a>
                 </div>
                 <div class="get_replies">
@@ -75,11 +75,11 @@
             </div>
             <div class="r-footer">
                 <div class="r-evaluation">
-                    <i class="bi bi-hand-thumbs-up r-likebtn likebtn"></i>
+                    <i class="bi bi-hand-thumbs-up r-likebtn likebtn" data-action="like" data-target="reply"></i>
                     <span class="r-likes">
                         
                     </span>
-                    <i class="bi bi-hand-thumbs-down r-dislikebtn dislikebtn"></i>
+                    <i class="bi bi-hand-thumbs-down r-dislikebtn dislikebtn" data-action="dislike" data-target="reply"></i>
                     <span class="r-gotoreply">GO</span>
                 </div>
                 <div class="r-user">
@@ -114,11 +114,11 @@
         </div>
         <div class="mrc-footer">
             <div class="mrc-evaluation">
-                <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn"></i>
+                <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn" data-action="like" data-target="comment"></i>
                 <span class="mrc-likes">
                     
                 </span>
-                <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn"></i>
+                <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn" data-action="dislike" data-target="comment"></i>
                 <a href="#" class="mrc-replybtn">Reply</a>
             </div>
         </div>
@@ -145,11 +145,11 @@
         </div>
         <div class="mrr-footer">
             <div class="mrr-evaluation">
-                <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn"></i>
+                <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn" data-action="like" data-target="reply"></i>
                 <span class="mrr-likes">
                     
                 </span>
-                <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
+                <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn" data-action="dislike" data-target="reply"></i>
                 <a href="#" class="mrr-replybtn">Reply</a>
             </div>
         </div>
@@ -197,9 +197,9 @@
             </div>
             <div class="mrc-footer">
                 <div class="mrc-evaluation">
-                    <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn"></i>
+                    <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn" data-target="post"></i>
                     <span class="mrc-likes">5465</span>
-                    <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn"></i>
+                    <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn" data-target="post"></i>
                     <a href="#" class="mrc-replybtn">Reply</a>
                 </div>
             </div>
