--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -117,9 +117,9 @@
                 </div>
                 <div class="p-footer">
                     <div class="p-evaluation">
-                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                        <span class="p-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                        <i class="bi bi-hand-thumbs-up likebtn"></i>
+                        <span class="p-likes vote_count">5465</span>
+                        <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
                     <div class="p-user">
@@ -184,9 +184,9 @@
                 </div>
                 <div class="p-footer">
                     <div class="p-evaluation">
-                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                        <span class="p-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                        <i class="bi bi-hand-thumbs-up likebtn"></i>
+                        <span class="p-likes vote_count">5465</span>
+                        <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
                     <div class="p-user">
@@ -249,9 +249,9 @@
                 </div>
                 <div class="p-footer">
                     <div class="p-evaluation">
-                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                        <span class="p-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                        <i class="bi bi-hand-thumbs-up likebtn"></i>
+                        <span class="p-likes vote_count">5465</span>
+                        <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
                     <div class="p-user">
@@ -322,9 +322,9 @@
                 </div>
                 <div class="p-footer">
                     <div class="p-evaluation">
-                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                        <span class="p-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                        <i class="bi bi-hand-thumbs-up likebtn"></i>
+                        <span class="p-likes vote_count">5465</span>
+                        <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
                     <div class="p-user">
@@ -388,9 +388,9 @@
                 </div>
                 <div class="p-footer">
                     <div class="p-evaluation">
-                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                        <span class="p-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                        <i class="bi bi-hand-thumbs-up likebtn"></i>
+                        <span class="p-likes vote_count">5465</span>
+                        <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
                     <div class="p-user">
