--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -300,8 +300,9 @@
                         </div>
                         <div class="p-footer">
                             <div class="p-evaluation">
-                                @{
-                                    int votedByUser = -2; // -2 means not logged in  (maybe temporary)
+                                
+                                @{ //Checking if the user logged in and voted the post
+                                    int votedByUser = -2; // -2 means not logged in
                                     if(userId != "-1"){
                                         if(post.votes.SingleOrDefault(p => p.accountId == Convert.ToInt32(userId) && p.body == true) != null){
                                             votedByUser = 1;
@@ -313,18 +314,33 @@
                                             votedByUser = -1;
                                         }
                                     }
-                                    
-                                    if(votedByUser == 1){
-                                        <i class="bi bi-hand-thumbs-up-fill active post-vote p-likebtn likebtn" data-action="like" data-target="post"></i>
+                                }
+                                @{ //Writing base vote result
+                                    if(post.voteResult >= 0){
+                                        int baseVotes = post.voteResult;
+                                        if(votedByUser == 1){
+                                            baseVotes = post.voteResult - 1;
+                                        } else if (votedByUser == 0){
+                                            baseVotes = post.voteResult + 1;
+                                        }
+                                        <input type="hidden" data-base_votes="@baseVotes">
                                     }
-                                    else if(votedByUser == 0 || votedByUser == -1){
-                                        <i class="bi bi-hand-thumbs-up post-vote p-likebtn likebtn" data-action="like" data-target="post"></i>
-                                    }
-                                    else if(votedByUser == -2){
-                                        <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
+                                    else{
+                                        <input type="hidden" data-base_votes="--">
                                     }
                                 }
-                                <span class="p-likes">
+                                @{
+                                    if(votedByUser == 1){
+                                        <i class="bi bi-hand-thumbs-up-fill active likebtn" data-action="like" data-target_type="post"></i>
+                                    }
+                                    else if(votedByUser == 0 || votedByUser == -1){
+                                        <i class="bi bi-hand-thumbs-up likebtn" data-action="like" data-target_type="post"></i>
+                                    }
+                                    else if(votedByUser == -2){
+                                        <i class="bi bi-hand-thumbs-up"></i>
+                                    }
+                                }
+                                <span class="p-likes vote_count">
                                     @{
                                         if(post.voteResult >= 0)
                                             @post.voteResult
@@ -334,26 +350,13 @@
                                 </span>
                                 @{
                                     if(votedByUser == 0){
-                                        <i class="bi bi-hand-thumbs-down-fill active post-vote p-dislikebtn dislikebtn" data-action="dislike" data-target="post"></i>
+                                        <i class="bi bi-hand-thumbs-down-fill active dislikebtn" data-action="dislike" data-target_type="post"></i>
                                     }
                                     else if(votedByUser == 1 || votedByUser == -1){
-                                        <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn dislikebtn" data-action="dislike" data-target="post"></i>
+                                        <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike" data-target_type="post"></i>
                                     }
                                     else if(votedByUser == -2){
-                                        <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
-                                    }
-
-                                    if(post.voteResult >= 0){
-                                        int untouchedLikes = post.voteResult;
-                                        if(votedByUser == 1){
-                                            untouchedLikes = post.voteResult - 1;
-                                        } else if (votedByUser == 0){
-                                            untouchedLikes = post.voteResult + 1;
-                                        }
-                                        <input type="hidden" id="postvote-@post.id" value="@untouchedLikes">
-                                    }
-                                    else{
-                                        <input type="hidden" id="postvote-@post.id" value="--">
+                                        <i class="bi bi-hand-thumbs-down"></i>
                                     }
                                 }
                                 <span class="p-rate">
@@ -484,9 +487,9 @@
             </div>
             <div class="p-footer">
                 <div class="p-evaluation">
-                    <i class="bi bi-hand-thumbs-up p-likebtn likebtn"></i>
-                    <span class="p-likes">5465</span>
-                    <i class="bi bi-hand-thumbs-down p-dislikebtn dislikebtn"></i>
+                    <i class="bi bi-hand-thumbs-up likebtn"></i>
+                    <span class="p-likes vote_count">5465</span>
+                    <i class="bi bi-hand-thumbs-down dislikebtn"></i>
                     <span class="p-rate">7.4/10</span>
                 </div>
                 <div class="p-user">
