--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     @RenderSection("Stylesheets", required: false)
 </head>
 <body class="darkmode">
+    <input type="hidden" id="userid_utility" value="@userId">
     <div id="g_id_onload"
          data-client_id="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com"
          data-ux_mode="popup"
