vote visual calculations

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -327,7 +327,7 @@
                                     }
 
                                     //Writing base vote result
-                                    if(post.voteResult >= 0){
+                                    /*if(post.voteResult >= 0){
                                         int baseVotes = post.voteResult;
                                         if(votedByUser == 1){
                                             baseVotes = post.voteResult - 1;
@@ -337,6 +337,13 @@
                                         <input type="hidden" data-base_votes="@baseVotes">
                                     }
                                     else{
+                                        <input type="hidden" data-base_votes="--">
+                                    }*/
+                                }
+                                @{
+                                    if(post.voteResult >= 0) {
+                                        <input type="hidden" data-base_votes="@post.voteResult">
+                                    } else {
                                         <input type="hidden" data-base_votes="--">
                                     }
                                 }
