vote stuff... again

--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -53,9 +53,9 @@
             </div>
             <div class="c-footer">
                 <div class="c-evaluation">
-                    <i class="bi" data-action="like" data-target_type="comment"></i>
+                    <i class="bi bi-hand-thumbs-up likebtn" data-action="like" data-target_type="comment"></i>
                     <span class="c-likes vote_count">--</span>
-                    <i class="bi" data-action="dislike" data-target_type="comment"></i>
+                    <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike" data-target_type="comment"></i>
                     <a href="#" class="c-replybtn">Reply</a>
                 </div>
                 <div class="get_replies">
@@ -110,9 +110,9 @@
         </div>
         <div class="mrc-footer">
             <div class="mrc-evaluation">
-                <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn" data-action="like" data-target_type="comment"></i>
+                <i class="bi bi-hand-thumbs-up likebtn" data-action="like" data-target_type="comment"></i>
                 <span class="mrc-likes vote_count">--</span>
-                <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn" data-action="dislike" data-target_type="comment"></i>
+                <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike" data-target_type="comment"></i>
                 <a href="#" class="mrc-replybtn">Reply</a>
             </div>
         </div>
