rate request minapi

--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -324,6 +324,9 @@ main{
     align-items: center;
     padding: 0 10px;
     font-family: 'Josefin Sans', sans-serif;
+    select{
+        
+    }
     button{
         background-color: rgb(60, 102, 119);
         transition: background-color 0.2s ease;
