--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -319,7 +319,20 @@
     <span>8/10</span>
 </div>-->
 <div class="rate_it">
-    <button>Rate it</button>
+    <select id="rate_it_select">
+        <option value="0">--</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+    <button id="rate_it_btn">Rate it</button>
 </div>
 
 @if(userId != "-1"){ ///images/users/
